# mlops

./: .env.example  .gitignore  FINAL_SECURITY_REPORT.md  Minikube-kubectl-commands  Project  ProjectCrawler  ProjectWebBrowser  README.md  SECURITY_CLEANUP.md  SECURITY_CLEANUP_COMPLETE.md  SECURITY_SCAN_REPORT.md  kubectl-commands
.cursor/rules/: agents.mdc  database.mdc  files.mdc  home-server-agent-utils.mdc  home-server-build-scripts.mdc  home-server-database.mdc  home-server-development.mdc  home-server-files.mdc  home-server-infrastructure.mdc  home-server-llm-models.mdc  home-server-prompt-context.mdc  home-server-security.mdc  home-server-socat.mdc  home-server-traefik.mdc  home-server-web-crawler.mdc  home-server.mdc  infrastructure.mdc  llm-models.mdc  observability.mdc  renderer.mdc  security.mdc  shared.mdc  socat.mdc  traefik.mdc  web-crawler.mdc
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
agents/price_comparison/: .env.example  README.md  requirements.txt
agents/product_search_agent/: PRD.md  README.md  pyproject.toml  requirements.txt  setup.py  start.sh
agents/renderer/: .env.example  Dockerfile  README.md  deploy.sh  pyproject.toml  start.sh
agents/renderer/src/api/: routes.py
agents/research_agent/: .env.example  README.md  setup.py  start.sh
agents/shared/: README.md  __init__.py  alembic.ini  logging.py  pyproject.toml  requirements.txt  setup.py  web_crawler_client.py
agents/shared/agent_utils/: __init__.py  logging.py  ollama.py  redis_client.py  web_crawler.py
agents/shared/config/: database.py
agents/shared/database/: manager.py
agents/shared/migrations/: env.py
agents/shared/migrations/versions/: cb21f0687cbd_create_webpage_table.py
agents/shared/models/: webpage.py
agents/shared/repositories/: webpage.py
agents/shared/scripts/: db_init.py  generate_and_apply_migration.sh  run_migrations.sh
agents/shared/shared/: __init__.py  logging.py  ollama_client.py  redis_client.py  truncate_tables.py  web_crawler_client.py
agents/shared/shared/config/: __init__.py  database.py
agents/shared/shared/database/: manager.py
agents/shared/shared/interfaces/: renderer.py  web_crawler.py
agents/shared/shared/models/: __init__.py  base.py  webpage.py
agents/shared/shared/repositories/: __init__.py  base.py
agents/web_crawler/: .env.example  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt  setup.py  start.sh
agents/web_crawler/src/: agent.py  config.py  crawler.py  database.py  example.py  main.py
agents/web_crawler/src/api/: app.py  models.py  routes.py
agents/web_crawler/src/core/: __init__.py  agent.py  crawler.py  database.py  models.py  storage.py
agents/web_research_agent/: .env.example  README.md  setup.py
docs/rules/: home-server-web-crawler.mdc
k8s/: busybox.yaml  kustomization.yaml  quote.yaml  setup.sh
k8s-learn/: development.yaml  namespace.yaml  service.yaml
k8s/argocd/: SECRETS_README.md  configmaps.yaml  controllers.yaml  crds.yaml  default-project.yaml  deployments.yaml  ingress.yaml  ingressroute.yaml  install.yaml  kustomization.yaml  middleware.yaml  rbac.yaml  redis-secret.yaml  secrets.yaml  services.yaml
k8s/authelia/: authelia-config.yml  deployment.yml  ingress.yml  pvc.yml  secrets.example.yml  service.yml  users_database.yml
k8s/dozzle/: deployment.yaml  ingressroute.yaml  kustomization.yaml  rbac.yaml  service.yaml
k8s/grafana/: dashboard-applications.configmap.yaml  dashboard-k8s-logs.configmap.yaml  dashboard-k8s-metrics.configmap.yaml  dashboard-traffic.configmap.yaml  (+7 more)
services/openwebui_tools/: Dockerfile  README.md  deploy.sh  pyproject.toml  start.sh
services/openwebui_tools/src/: __init__.py  main.py
services/renderer/: .env.example  README.md  deploy.sh  pyproject.toml  start.sh
services/renderer/src/: main.py
services/renderer/src/api/: app.py  routes.py
terraform/: waf.tf
(+263 files in other folders)
