[project]
name = "renderer"
version = "0.1.0"
description = "Playwright-based renderer microservice (screenshots, render HTML)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.23.0",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.0",
  "playwright==1.54.0",
  "Pillow>=10.3.0",
  "requests>=2.25.0",
]

[tool.setuptools]
package-dir = {"" = "src"}



