[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for AI agents"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "aiohttp>=3.9.0",
  "python-dateutil>=2.8.2",
  "python-dotenv>=1.0.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
  "loguru>=0.7.0",
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.0.0",
  "pgvector>=0.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.23.0",
  "black>=24.0.0",
  "isort>=5.13.0"
]

[tool.setuptools.packages.find]
include = ["shared*"] 