[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web_crawler"
version = "0.1.0"
description = "Web crawler agent for AI platform"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "python-dotenv>=1.0.0",
  "aiohttp>=3.9.0",
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.0.0",
  "shared @ file:///Users/fabian/dev/Personal/mlops/agents/shared",
  "crawl4ai"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.23.0",
  "black>=24.0.0",
  "isort>=5.13.0"
] 