[project]
name = "renderer"
version = "0.1.0"
description = "Playwright-based renderer microservice (screenshots, render HTML)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright==1.54.0",
  "playwright-stealth>=2.0.0",
  "Pillow>=10.3.0",
  "requests>=2.25.0",
]

[tool.setuptools]
package-dir = {"" = "src"}



